# nir-seal-inspection

./: .gitignore  ARCHITECTURE.md  CITATION.cff  EXPERIMENTS.md  LICENSE  Makefile  README.md  REPRODUCE.md  build_figs2.py  pyproject.toml  rename_ham1.sh  requirements.txt  thresholds_plot.py
data_prep/: analyze_data.py  counts.py  fetch_data.sh  make_holdout.py  make_strips.py  predict_to_cvat_lite.py  unroll_seal.py
demo/: README.md  app.py  bench_latency.py  demo.py  pipeline.py  pipeline_core.py  requirements.txt
deploy/: bench_cpu.py  export_bench.py  export_demo_onnx.py  pipeline_e2e.py  predict.py  quality_score.py  quantize_int8.py  time_int8.py
docs/: SOURCE_OF_TRUTH.md
evaluation/: error_analysis.py  eval_boundary.py  eval_copypaste.py  eval_e2e.py  eval_int8_quality.py  eval_seal.py  eval_systems_e2e.py  eval_tables.py  eval_thresholds.py  eval_tiny_e2e.py  thresh_for_recall.py
experiments/: ablation_augment.py  ablation_resolution_1280.py  ablation_transfer.py  ablation_transfer_e2e.py  baseline_patchcore.py  eval_pretrain_gt.py  eval_resolution.py  kfold_cv.py  lopo_prod6.py  lopo_seal.py
figures/: build_figs2.py  defect_viz.py  fp_strips.py  gen_copypaste.py  gen_overlays.py  gen_preproc.py  gen_sealpaste.py  gt_vs_pred.py  seal_viz_lite.py  thresholds_plot.py
results/: ablation_augment.json  ablation_copypaste.json  ablation_resolution.json  ablation_resolution_1280.json  ablation_transfer.json  ablation_transfer_e2e.json  baseline_patchcore.json  eval_seal.json  eval_tables.json  eval_thresholds.json  eval_tiny_e2e.json  int8_quality.json  (+5 more)
(+101 files in other folders)
